force-app/main/default/objects/Candidate_Skill__c/Candidate_Skill__c.object-meta.xml
<CustomObject>
    <label>Candidate_Skill</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Candidate_Skill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidate_Skils</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>