force-app/main/default/objects/Candidate_Skill__c/fields/Skill_Category__c.field-meta.xml
<CustomField>
    <fullName>Skill_Category__c</fullName>
    <label>Skill Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMR/EHR System</fullName>
            </value>
            <value>
                <fullName>Clinical Specialization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>