force-app/main/default/objects/Candidate_Skill__c/fields/Skill_Name__c.field-meta.xml
<CustomField>
    <fullName>Skill_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Skill Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>